# research-llm

./: .gitignore  LICENSE  Makefile  README.md  char2pos.txt  pos2char.txt  pyproject.toml  requirements.txt
.dvc/: config
meeting_notes/: note_24_01_2025.txt
module__pre_post_experiments/: __init__.py  dataset.py  plots.py
module__pre_post_experiments/modeling/: model.py  predict.py  test_ground_truth_notes_none.py  test_ground_truth_notes_pre.py  test_one_max_pre.py  train.py  train_none.py
module_experiment_2/: get_special_characters.ipynb  gpt2_vocab.txt  lalka_prus.txt  lalka_prus_normal_train.txt  lalka_prus_normal_val.txt  lalka_prus_train.txt  lalka_prus_val.txt  polish_vocab.txt  process_polish_corpus.py  process_polish_corpus_normal.py  sample.py  sample.txt  test_ground_truth_notes_post.py  test_ground_truth_notes_post_normal.py  train_post.py  train_post_normal.py  train_post_normal_v2.py  train_post_v2.py
notebooks/: download_data.py  draft.ipynb  draft.py  gpu_stress_test.py
reports/: analysis.py
reports/blank/: results_ground_blank.csv
reports/experiment_2/: analysis.ipynb  merged_results_analysis.csv  results_ground_post.csv  results_ground_post_normal.csv
reports/experiment_2_v2/: analysis.ipynb  merged_results_analysis.csv  results_ground_post.csv  results_ground_post_normal.csv
reports/experiment_2_v3/: analysis.ipynb  results_ground_post.csv  results_ground_post_normal.csv
reports/experiment_2_v4/: analysis.ipynb  results_ground_post.csv
research-llm-module/: features.py
wandb/: init.py  latest-run  test.py
(+123 files in other folders)
