[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "research-llm-module"
version = "0.0.1"
description = "Research about new ways of training language models. Introducing intermediate generation tokens (notes) as a way of increasing compute per answer."
authors = [
  { name = "Antoni Czapski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["research-llm-module"]
force_sort_within_sections = true
